# Mental-Chat-API

./: .env.local  README.md  main.py  pyproject.toml
app/: __init__.py
app/chat/: GeminiBot.py  MentalHealthBot.py  __init__.py
app/db/: Mongo.py  __init__.py
app/services/: TextSentiment.py  VoiceSentiment.py  __init__.py
